Mon Sep 14 11:10:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (check-ruby): run all test of ruby itself.

Mon Sep 14 07:30:56 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/cgi/cookie.rb (value): Keep CGI::Cookie#value in sync with the
	  cookie itself. A patch by Arthur Schreiber [ruby-core:17634]

Mon Sep 14 04:57:27 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/irb/ext/multi-irb.rb: Fix arguments handling for shell commands
	  in irb; a patch by Yusuke Endoh [ruby-dev:35075]

Sun Sep 13 22:13:35 2009  Tanaka Akira  <akr@fsij.org>

	* lib/tempfile.rb (Tempfile::Remover): new class to replace
	  Tempfile.callback.  [ruby-core:17824] [ruby-dev:39271]
	  See [ruby-dev:39317] for the reason.

Sun Sep 13 11:06:12 2009  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (OpenURI::Meta#content_type_parse): strip quotes.

Sun Sep 13 01:55:32 2009  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (URI::FTP#buffer_open): fix the %2F handling.

	* lib/open-uri.rb (URI::FTP#buffer_open): use the port specified in
	  the URI.

Sat Sep 12 13:29:58 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (EVENTSINK_Invoke): initialize result
	  variant value.

Thu Sep 10 23:00:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): fix for parallel execution.
	  [ruby-core:25509]

Sat Sep  5 06:29:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_binmode): check if closed regardless platforms.
	  [ruby-core:25363]

Fri Sep  4 20:40:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (round): added declaration.  [ruby-dev:39222]

Fri Sep  4 09:52:58 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: forgot to mention about new looser splats.

Wed Sep  2 13:47:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (domain_check): simplified.

Sun Aug 30 15:12:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
