@@ -81,7 +81,7 @@ TESTWORKDIR   = testwork
 
 VCS           = svn
 
-all: main
+all: main $(RDOCTARGET)
 
 main: exts
 	@$(RUNCMD) $(MKMAIN_CMD) $(MAKE)
@@ -111,7 +111,7 @@ $(STATIC_RUBY)$(EXEEXT): $(MAINOBJ) $(DLDOBJS) $(EXTOBJS) $(LIBRUBY_A)
 ruby.imp: $(OBJS)
 	@$(NM) -Pgp $(OBJS) | awk 'BEGIN{print "#!"}; $$2~/^[BD]$$/{print $$1}' | sort -u -o $@
 
-install: install-nodoc $(RDOCTARGET)
+install: install-nodoc install-$(RDOCTARGET)
 install-all: install-nodoc install-doc
 
 install-nodoc: pre-install-nodoc do-install-nodoc post-install-nodoc
@@ -272,6 +272,7 @@ post-install-doc::
 rdoc: $(PROGRAM) PHONY
 	@echo Generating RDoc documentation
 	$(RUNRUBY) "$(srcdir)/bin/rdoc" --all --ri --op "$(RDOCOUT)" "$(srcdir)"
+nodoc: PHONY
 
 what-where-doc: no-install-doc
 no-install-doc: pre-no-install-doc dont-install-doc post-no-install-doc
