@@ -1,3 +1,8 @@
+Mon Sep 14 11:23:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in, common.mk, */configure.bat (rdoc): make before
+	  install if rdoc is enabled.  [ruby-dev:39325]
+
 Mon Sep 14 11:10:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* common.mk (check-ruby): run all test of ruby itself.
